testdata/e2e/examples/namespace-template-config/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: namespace-template-config
spec:
  steps:
  - try:
    - assert:
        resource:
          apiVersion: v1
          kind: Namespace
          metadata:
            annotations:
              from-config-file: hello
